# msan-guide

./: .gitignore  CMakeLists.txt
.github/workflows/: build-cxx-project-msan.yml  build-cxx-project.yml  build.yml  clang-tidy-cppcheck.yml  clang-tidy.yml  codeql.yml  coverity.yml  infer-analysis.yml  sonarcloud.yml
cxx-project/: CMakeLists.txt  README.md
cxx-project/include/: crypto_utils.h
cxx-project/src/: crypto_utils.cpp  main.cpp
cxx-project/tests/: test_crypto_utils.cpp
small-examples/: CMakeLists.txt  prog1.c  prog2.c  prog3.c  trivial.c
